MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.8 Terminis de l'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1217 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -14,16 +14,17 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.disseny=http://siona:siona@localhost:8080/helium/index.html
-test.base.url.feina=http://siona:siona@localhost:8080/helium/index.html
+#test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
+test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=admin
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=siona
+test.base.usuari.disseny=admin
 test.base.usuari.disseny.nom=Usuari Administrador
 
-test.base.usuari.feina=siona
+test.base.usuari.feina=admin
 test.base.usuari.feina.nom=Usuari Administrador
 
 test.base.rol.configuracio=HEL_USER
@@ -35,8 +36,8 @@ test.base.group.tipo=tipo de pruebas
 
 # Entorn
 # --------------------------------------------------------------------
-entorn.nom=Selenium entorn
-#entorn.nom=proves_selenium
+#entorn.nom=Selenium entorn
+entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
@@ -120,23 +121,28 @@ tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
 tramit.docadjunt.nom1=Nom document adjunt 1
 
-tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_accio.par
-tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_accio.exp
+tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_accio.par
+tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_accio.exp
 
-defproc.mod.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_mod_exp.par
-defproc.mod.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_mod_exp.exp
+defproc.mod.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_mod_exp.par
+defproc.mod.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_mod_exp.exp
 
-defproc.nou.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_nou_exp.par
-defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_nou_exp.exp
+defproc.nou.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_nou_exp.par
+defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_nou_exp.exp
 
-defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.par
-defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.exp
+defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tasca_ini_exp.par
+defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_ini_exp.exp
 
-defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_dades_exp.exp
-defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_subproces.par
+defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_dades_exp.exp
+
+defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces.par
+
+defproc.termini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_termini.exp
 
 deploy.arxiu.pdf.tramitacio_1=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.pdf.tramitacio_1.hash=a6b659799e66c72da78fd0a426283859
 deploy.arxiu.pdf.tramitacio_2=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.pdf.tramitacio_2.hash=a6b659799e66c72da78fd0a426283859
 # --------------------------------------------------------------------
 
 
