MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.4.1 Assignar variables 	DPR.4.2 Modificar atributs 	DPR.4.3 Ordenar variables 	DPR.4.4 Desassignar variables 	DPR.4.5 Assignar documnets 	DPR.4.6 Modificar atributs 	DPR.4.7 Ordenar documents 	DPR.4.8 Desassignar document 	DPR.4.9 Afegir signatura a document 	DPR.4.10 Modificar atributs de signatura 	DPR.4.11 Ordenar signatures 	DPR.4.12 Treure signatures
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1221 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -14,17 +14,16 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
-#test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
-test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.disseny=http://siona:siona@localhost:8080/helium/index.html
+test.base.url.feina=http://siona:siona@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=admin
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=admin
+test.base.usuari.disseny=siona
 test.base.usuari.disseny.nom=Usuari Administrador
 
-test.base.usuari.feina=admin
+test.base.usuari.feina=siona
 test.base.usuari.feina.nom=Usuari Administrador
 
 test.base.rol.configuracio=HEL_USER
@@ -36,8 +35,8 @@ test.base.group.tipo=tipo de pruebas
 
 # Entorn
 # --------------------------------------------------------------------
-#entorn.nom=Selenium entorn
-entorn.nom=proves_selenium
+entorn.nom=Selenium entorn
+#entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
@@ -105,6 +104,8 @@ defproc.document.plant2.hash=9f557d239683751f2d210947b8424afd
 # Definició de procés - Tasques
 # --------------------------------------------------------------------
 defproc.export.arxiu.path=/home/sion/Escriptori/lot3/expexe_defpro_tasques.exp
+defproc.tasca.tasca1=tasca1
+defproc.tasca.tasca2=tasca2
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
 
