MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.2.1.9.2 Crear variables tipus Selecció amb domini 	DPR.2.1.9.3 Crear variables tipus Selecció amb domini intern 	DPR.2.1.9.4 Crear variables tipus Selecció amb consulta per tipus 	DPR.2.1.10 Crear variables tipus Suggest 	DPR.2.1.12 Crear variables tipus Acció
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1233 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -61,9 +61,15 @@ defproc.deploy.export.path=/home/sion/Escriptori/lot3/expexe_defpro_ini.exp
 
 # Definició de procés - Variables
 # --------------------------------------------------------------------
+# Enumerat
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
+# Domini
+defproc.dom.datasource=java:/comp/env/jdbc/HeliumDS
+defproc.dom.sql=select val.codi, val.nom from hel_enumeracio_valors val, hel_enumeracio enum where enum.codi =:codi and enum.entorn_id in ( select hel_entorn.id from hel_entorn where hel_entorn.codi =:entornCodi ) and enum.id = val.enumeracio_id order by val.codi
+# Consulta per tipus
 
+# Agrupacions
 defproc.deploy.agrupacio.1.codi=agrup1
 defproc.deploy.agrupacio.1.nom=Agrupació de test 1
 defproc.deploy.agrupacio.2.codi=agrup2
@@ -86,9 +92,33 @@ defproc.variable.price.nom=Nom variable price
 defproc.variable.term.codi=var_term
 defproc.variable.term.nom=Nom variable termini
 defproc.variable.enum.codi=var_selenum
-defproc.variable.enum.nom=Nom variable boolean
+defproc.variable.enum.nom=Nom variable selenum
 defproc.variable.reg.codi=var_registre
 defproc.variable.reg.nom=Nom variable registre
+defproc.variable.dom.codi=var_seldom
+defproc.variable.dom.nom=Nom variable seldom
+defproc.variable.dom.domini=enumerat
+defproc.variable.dom.params=codi:#{'sino'};entornCodi:#{'Selenium defpro'}
+defproc.variable.dom.valor=CODI
+defproc.variable.dom.text=NOM
+defproc.variable.int.codi=var_selint
+defproc.variable.int.nom=Nom variable selint
+defproc.variable.int.domini=PERSONES_AMB_AREA
+defproc.variable.int.params=area:#{'DIS'}
+defproc.variable.int.valor=codi
+defproc.variable.int.text=nomSencer
+defproc.variable.con.codi=var_selcon
+defproc.variable.con.nom=Nom variable selson
+defproc.variable.con.consulta=selcon
+defproc.variable.con.params=
+defproc.variable.con.valor=expedient%id
+defproc.variable.con.text=expedient%numero
+defproc.variable.sugenum.codi=var_sugenum
+defproc.variable.sugenum.nom=Nom variable sugenum
+defproc.variable.accio.codi=var_accio
+defproc.variable.accio.nom=Nom variable accio
+defproc.variable.accio.accio=action
+
 
 # Definició de procés - Docuemnts
 # --------------------------------------------------------------------
