--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -14,16 +14,17 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.disseny=http://siona:siona@localhost:8080/helium/index.html
-test.base.url.feina=http://siona:siona@localhost:8080/helium/index.html
+#test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
+test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=admin
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=siona
+test.base.usuari.disseny=admin
 test.base.usuari.disseny.nom=Usuari Administrador
 
-test.base.usuari.feina=siona
+test.base.usuari.feina=admin
 test.base.usuari.feina.nom=Usuari Administrador
 
 test.base.rol.configuracio=HEL_USER
@@ -35,8 +36,8 @@ test.base.group.tipo=tipo de pruebas
 
 # Entorn
 # --------------------------------------------------------------------
-entorn.nom=Selenium entorn
-#entorn.nom=proves_selenium
+#entorn.nom=Selenium entorn
+entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
@@ -77,8 +78,8 @@ defproc.deploy.agrupacio.2.nom=Agrupació de test 2
 
 defproc.variable.string.codi=var_str
 defproc.variable.string.nom=Nom variable string
-defproc.variable.int.codi=var_int
-defproc.variable.int.nom=Nom variable integer
+defproc.variable.int.codi=var_selint
+defproc.variable.int.nom=Nom variable selint
 defproc.variable.float.codi=var_float
 defproc.variable.float.nom=Nom variable float
 defproc.variable.bool.codi=var_bool
@@ -101,8 +102,6 @@ defproc.variable.dom.domini=enumerat
 defproc.variable.dom.params=codi:#{'sino'};entornCodi:#{'Selenium defpro'}
 defproc.variable.dom.valor=CODI
 defproc.variable.dom.text=NOM
-defproc.variable.int.codi=var_selint
-defproc.variable.int.nom=Nom variable selint
 defproc.variable.int.domini=PERSONES_AMB_AREA
 defproc.variable.int.params=area:#{'DIS'}
 defproc.variable.int.valor=codi
@@ -165,6 +164,9 @@ defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_heliu
 defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_ini_exp.exp
 
 defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_dades_exp.exp
+
+defproc.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tramitacion.exp
+tipexp.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\tipexp\\expexe_tramitacion.exp
 
 defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces.par
 
