MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.5 Agrupacions 	DPR.6 Terminis 	DPR.7 Accions 	DPR.8 Descarregar recursos 	DPR.9 Importar dades a definició de procés 	DPR.10 Exportar versió de definició de procés 	DPR.11 Eliminar versió de definició de procés
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1252 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -93,6 +93,7 @@
 					<includes>
 						<!-- Suites de proves a executar -->
 						<include>**/ConfiguracioEntornSuite.java</include>
+						<include>**/ConfiguracioDefinicioProcesSuite.java</include>
 					</includes>
 					<skipTests>${skipTests}</skipTests>
 				</configuration>
