--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -2,7 +2,8 @@
 test.browser=firefox
 
 # Suits a executar
-test.executar.suite.configuracio=true
+test.executar.suite.configuracio.entorn=true
+test.executar.suite.configuracio.defpro=true
 
 # Drivers de los navegadores
 # Windows
@@ -59,6 +60,8 @@ defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
 #deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
 defproc.export.entorn.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
 defproc.deploy.export.path=/home/sion/Escriptori/lot3/expexe_defpro_ini.exp
+defproc.import.dades.path=/home/sion/Escriptori/lot3/expexe_defpro_import.exp
+defproc.export.dades.hash=3e1448b7deb1e7bb2e5ed8edaa2cc699
 
 # Definició de procés - Variables
 # --------------------------------------------------------------------
@@ -70,12 +73,7 @@ defproc.dom.datasource=java:/comp/env/jdbc/HeliumDS
 defproc.dom.sql=select val.codi, val.nom from hel_enumeracio_valors val, hel_enumeracio enum where enum.codi =:codi and enum.entorn_id in ( select hel_entorn.id from hel_entorn where hel_entorn.codi =:entornCodi ) and enum.id = val.enumeracio_id order by val.codi
 # Consulta per tipus
 
-# Agrupacions
-defproc.deploy.agrupacio.1.codi=agrup1
-defproc.deploy.agrupacio.1.nom=Agrupació de test 1
-defproc.deploy.agrupacio.2.codi=agrup2
-defproc.deploy.agrupacio.2.nom=Agrupació de test 2
-
+# Variables
 defproc.variable.string.codi=var_str
 defproc.variable.string.nom=Nom variable string
 defproc.variable.int.codi=var_selint
@@ -135,6 +133,33 @@ defproc.document.plant2.hash=9f557d239683751f2d210947b8424afd
 defproc.export.arxiu.path=/home/sion/Escriptori/lot3/expexe_defpro_tasques.exp
 defproc.tasca.tasca1=tasca1
 defproc.tasca.tasca2=tasca2
+
+# Definició de procés - Agrupacions
+# --------------------------------------------------------------------
+defproc.agrupacio.1.codi=agrup1
+defproc.agrupacio.1.nom=Agrupació de test 1
+defproc.agrupacio.2.codi=agrup2
+defproc.agrupacio.2.nom=Agrupació de test 2
+defproc.agrupacio.3.codi=agrup3
+defproc.agrupacio.3.nom=Agrupació de test 3
+
+# Definició de procés - Terminis
+# --------------------------------------------------------------------
+defproc.termini.1.codi=term1
+defproc.termini.1.nom=Termini de test 1
+
+# Definició de procés - Accions
+# --------------------------------------------------------------------
+defproc.accio.1.codi=accio1
+defproc.accio.1.nom=Acció de test 1
+defproc.accio.1.handler=action
+
+# Definició de procés - Recursos
+# --------------------------------------------------------------------
+defproc.recurs.gpd.hash=3d00395611f1195a90d99dbf024e51eb
+defproc.recurs.processimage.hash=dd9e3fb164e67a4ba4fb2b1a0438ab9e
+defproc.recurs.processdefinition.hash=000c425d6a58b3103b67bba4d774eae5
+
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
 
