MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.10.3.2.1 Data del document EXP.10.3.2.2 Generar amb plantilla EXP.10.3.2.3 Signatura de documents EXP.10.3.1.4 Execució d'accions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1259 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -117,7 +117,7 @@ defproc.variable.accio.nom=Nom variable accio
 defproc.variable.accio.accio=action
 
 
-# Definició de procés - Docuemnts
+# Definició de procés - Documents
 # --------------------------------------------------------------------
 defproc.document.noplant.codi=docnoplant
 defproc.document.noplant.nom=Document sense plantilla
@@ -175,6 +175,8 @@ tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
 tramit.docadjunt.nom1=Nom document adjunt 1
+
+tramsel.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tramitacion.par
 
 tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_accio.par
 tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_accio.exp
