MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.10.3.1.2 Comprovar el pas entre procés i subprocés
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1260 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -52,7 +52,7 @@ defproc.deploy.definicio.proces.nom=expexe
 defproc.deploy.definicio.subproces.nom=subprocesInfo
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
-defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
+defproc.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe.par
 #deploy.arxiu.path=src\\test\\resources\\expexe.par
 # Windows
 # deploy.arxiu.path=c:/expexe.par
@@ -195,6 +195,7 @@ defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_
 defproc.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tramitacion.exp
 tipexp.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\tipexp\\expexe_tramitacion.exp
 
+defproc.deploy.definicio.subproces.main.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces_main.par
 defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces.par
 
 defproc.termini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_termini.exp
