MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.10.1 Visualitzar tasques EXP.10.2.1 Agafar tasca EXP.10.2.2 Alliberar tasca
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1261 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -177,7 +177,7 @@ tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 tramit.docadjunt.nom1=Nom document adjunt 1
 
 tramsel.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tramitacion.par
-
+tramsel_accio.deploy_agafar_alliberar.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_agafar_alliberar.par
 tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_accio.par
 tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_accio.exp
 
