MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.10.3.3.1 Comprovar el funcionament flux EXP.10.3.3.2 Comprovar el funcionament de fork / join EXP.10.3.3.3 Comprovar assignacions jbpm EXP.10.3.1.4 Execució d'accions tasca EXP.10.3.3.4 Comprovació de l'execució dels events EXP.10.3.3.5 Comprovació de l'execució de timers
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1264 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -15,6 +15,7 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
+#test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
 test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
@@ -177,6 +178,7 @@ tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 tramit.docadjunt.nom1=Nom document adjunt 1
 
 tramsel.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tramitacion.par
+tramsel_accio.deploy_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_flux.par
 tramsel_accio.deploy_agafar_alliberar.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_agafar_alliberar.par
 tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_accio.par
 tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_accio.exp
@@ -190,6 +192,8 @@ defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\heli
 defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tasca_ini_exp.par
 defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_ini_exp.exp
 
+tipexp.tasca_dades.exp.export_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\tipexp\\expexe_flux.exp
+defproc.tasca_dades.exp.export_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_flux.exp
 defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_dades_exp.exp
 
 defproc.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tramitacion.exp
