MID: 655 MSG: Jocs de proves amb Selenium v.3 	Consultes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1269 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -14,20 +14,20 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
-test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.configuracio=http://curso175:alu52pt@localhost:8080/helium/index.html
 #test.base.url.configuracio=http://oficina.limit.es/helium/index.html
 #test.base.url.configuracio=http://marionam:marionam@localhost:8080/helium/index.html
-test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
+test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
 
-test.base.usuari.configuracio=admin
+test.base.usuari.configuracio=curso175
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=admin
-test.base.usuari.disseny.nom=Usuari Administrador
+test.base.usuari.disseny=curso173
+test.base.usuari.disseny.nom=Usuari Dissenyador
 
-test.base.usuari.feina=admin
-test.base.usuari.feina.nom=Usuari Administrador
+test.base.usuari.feina=curso174
+test.base.usuari.feina.nom=Usuari Feina
 
 test.base.rol.configuracio=HEL_USER
 test.base.group=pruebas
@@ -53,7 +53,7 @@ defproc.deploy.definicio.proces.nom=expexe
 defproc.deploy.definicio.subproces.nom=subprocesInfo
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
-defproc.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe.par
+defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
 #deploy.arxiu.path=src\\test\\resources\\expexe.par
 # Windows
 # deploy.arxiu.path=c:/expexe.par
@@ -242,51 +242,20 @@ deploy.arxiu.registre=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\heli
 app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
 
 
+# CONSULTES
+######################################################################
 
+# Expedient
+# --------------------------------------------------------------------
+consulta.entorn.nom=Selenium consulta
+consulta.entorn.titol=Entorn de proves Selenium - Consulta
+consulta.deploy.definicio.proces.nom=Cons1
+consulta.deploy.definicio.proces.path={0}/exports/defpro/consulta.exp
+consulta.deploy.tipus.expedient.codi.1=Selenium consulta 1
+consulta.deploy.tipus.expedient.nom.1=Selenium consulta 1
+consulta.deploy.tipus.expedient.path.1={0}/exports/tipexp/consulta1.exp
+consulta.deploy.tipus.expedient.codi.2=Selenium consulta 2
+consulta.deploy.tipus.expedient.nom.2=Selenium consulta 2
+consulta.deploy.tipus.expedient.path.2={0}/exports/tipexp/consulta2.exp
+consulta.deploy.entorn.path={0}/exports/entorn/entorn_consulta.exp
 
-
-#defproc.variable.codi2=var_dat01
-#defproc.variable.nom2=Nom variable data 1
-#defproc.variable.codi3=var_enum01
-#defproc.variable.nom3=Nom variable seleccio 1
-#defproc.variable.codi4=var_reg01
-#defproc.variable.nom4=Nom variable registre 1
-#defproc.variable.codi5=var_mul01
-#defproc.variable.nom5=Nom variable múltiple 1
-#defproc.variable.codi6=var_ocl01
-#defproc.variable.nom6=Nom variable oculta 1
-#defproc.variable.codi7=var_varreg01
-#defproc.variable.nom7=Camp 1 variable registre
-#defproc.variable.codi8=var_varreg02
-#defproc.variable.nom8=Camp 2 variable registre
-#
-#defproc.agrupacio.codi1=agrvar_01
-#
-#defproc.document.codi1=doc_01
-#defproc.document.nom1=Nom document 1
-#defproc.document.codi2=doc_02
-#defproc.document.nom2=Nom document 2
-#defproc.document.arxiu=c:/plantilla.odt
-#
-#defproc.termini.codi1=ter_01
-#defproc.termini.nom1=Nom termini 1
-#
-#defproc.tasca.codi1=tasca1
-#
-## Tipus d'expedient
-#tipexp.estat.codi1=revdoc
-#tipexp.estat.nom1=Revisant documentació
-#tipexp.enum.codi1=tipexp
-#tipexp.enum.nom1=Tipus expedient
-
-#tramit.exp.num=SE-16/2013
-#tramit.exp.nom=[SE-16/2013] Expedient de prova Selenium 16
-#tramit.tasca.nom1=tasca1
-#tramit.tasca.nom2=tasca2
-#tramit.doctasca.arxiu1=c:/docAdjunt.docx
-#tramit.variable.codi1=varstr02
-#tramit.variable.valor1=Valor variable string
-#tramit.usuari.codi1=u03420
-#tramit.document.nom1=Nom document 1
-#tramit.docadjunt.arxiu1=c:/docAdjunt.docx
-#tramit.docadjunt.nom1=Nom document adjunt 1
