MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1290 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -21,12 +21,15 @@ test.base.url.disseny=http://curso173:alu52pt@localhost:8080/helium/index.html
 test.base.url.feina=http://curso174:alu52pt@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=curso175
+test.base.usuari.configuracio.pass=alu52pt
 test.base.usuari.configuracio.nom=Usuari Administrador
 
 test.base.usuari.disseny=curso173
+test.base.usuari.disseny.pass=alu52pt
 test.base.usuari.disseny.nom=Usuari Dissenyador
 
 test.base.usuari.feina=curso174
+test.base.usuari.feina.pass=alu52pt
 test.base.usuari.feina.nom=Usuari Feina
 
 test.base.rol.configuracio=HEL_USER
@@ -170,43 +173,46 @@ defproc.recurs.processdefinition.hash=000c425d6a58b3103b67bba4d774eae5
 
 # Tramitació
 # --------------------------------------------------------------------
-tramsel.entorn.nom=Entorn de proves Selenium - Tramitación
+tramsel.entorn.nom=Entorn tramitación
 tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
 tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
 tramit.docadjunt.nom1=Nom document adjunt 1
 
-tramsel.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tramitacion.par
-tramsel_accio.deploy_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_flux.par
-tramsel_accio.deploy_agafar_alliberar.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_agafar_alliberar.par
-tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_accio.par
-tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_accio.exp
+tramsel_signature.export.arxiu.path={0}\\exports\\tipexp\\expexe_signature.exp
+tramsel.deploy.arxiu.path={0}\\bpm\\expexe_tramitacion.par
+tramsel_accio.deploy_flux.arxiu.path={0}\\bpm\\expexe_flux.par
+tramsel_accio.deploy_agafar_alliberar.arxiu.path={0}\\bpm\\expexe_agafar_alliberar.par
+tramsel_accio.deploy.arxiu.path={0}\\bpm\\expexe_accio.par
+tramsel_accio.export.arxiu.path={0}\\exports\\tipexp\\expexe_accio.exp
 
-defproc.mod.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_mod_exp.par
-defproc.mod.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_mod_exp.exp
+defproc.mod.exp.deploy.arxiu.path={0}\\bpm\\expexe_mod_exp.par
+defproc.mod.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_mod_exp.exp
 
-defproc.nou.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_nou_exp.par
-defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_nou_exp.exp
+defproc.nou.exp.deploy.arxiu.path={0}\\bpm\\expexe_nou_exp.par
+defproc.nou.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_nou_exp.exp
 
-defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_tasca_ini_exp.par
-defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_ini_exp.exp
+defproc.nou_tasca_ini.exp.deploy.arxiu.path={0}\\bpm\\expexe_tasca_ini_exp.par
+defproc.nou_tasca_ini.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_ini_exp.exp
 
-tipexp.tasca_dades.exp.export_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\tipexp\\expexe_flux.exp
-defproc.tasca_dades.exp.export_flux.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_flux.exp
-defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tasca_dades_exp.exp
+tipexp.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\tipexp\\expexe_flux.exp
+defproc.tasca_dades.exp.export_flux.arxiu.path={0}\\exports\\defpro\\expexe_flux.exp
+defproc.tasca_dades.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tasca_dades_exp.exp
 
-defproc.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_tramitacion.exp
-tipexp.tasca_dades_doc.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\tipexp\\expexe_tramitacion.exp
+defproc.tasca_dades_doc.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_tramitacion.exp
+tipexp.tasca_dades_doc.exp.export.arxiu.path={0}\\exports\\tipexp\\expexe_tramitacion.exp
 
-defproc.deploy.definicio.subproces.main.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces_main.par
-defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\bpm\\expexe_subproces.par
+defproc.deploy.definicio.subproces.main.path={0}\\bpm\\expexe_subproces_main.par
+defproc.deploy.definicio.subproces.main_direct.path={0}\\bpm\\expexe_subproces_main_direct.par
+defproc.deploy.expexe_executar_script.path={0}\\bpm\\expexe_executar_script.par
+defproc.subproces.deploy.arxiu.path={0}\\bpm\\expexe_subproces.par
 
-defproc.termini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\exports\\defpro\\expexe_termini.exp
+defproc.termini.exp.export.arxiu.path={0}\\exports\\defpro\\expexe_termini.exp
 
-deploy.arxiu.pdf.tramitacio_1=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.pdf.tramitacio_1={0}\\test\\util\\blank.pdf
 deploy.arxiu.pdf.tramitacio_1.hash=a6b659799e66c72da78fd0a426283859
-deploy.arxiu.pdf.tramitacio_2=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.pdf.tramitacio_2={0}\\test\\util\\blank.pdf
 deploy.arxiu.pdf.tramitacio_2.hash=a6b659799e66c72da78fd0a426283859
 # --------------------------------------------------------------------
 
@@ -217,7 +223,7 @@ deploy.arxiu.pdf.tramitacio_2.hash=a6b659799e66c72da78fd0a426283859
 
 # Portasignatures
 # --------------------------------------------------------------------
-deploy.arxiu.portasignatures=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.portasignatures={0}\\test\\util\\blank.pdf
 app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
 app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
 app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
@@ -226,7 +232,7 @@ app.portasignatures.plugin.password=HELIUM
 
 # Custodia
 # --------------------------------------------------------------------
-deploy.arxiu.custodia=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.custodia={0}\\test\\util\\blank.pdf
 app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
 app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
 app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
@@ -236,7 +242,7 @@ app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/si
 
 # Integració amb el Registre
 # --------------------------------------------------------------------
-deploy.arxiu.registre=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.registre={0}\\test\\util\\blank.pdf
 
 
 app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
@@ -259,3 +265,8 @@ consulta.deploy.tipus.expedient.nom.2=Selenium consulta 2
 consulta.deploy.tipus.expedient.path.2={0}/exports/tipexp/consulta2.exp
 consulta.deploy.entorn.path={0}/exports/entorn/entorn_consulta.exp
 
+# Tramitació massiva
+# --------------------------------------------------------------------
+tramas.entorn.nom=Selenium tramas
+tramas.entorn.titol=Entorn de proves Selenium - Tramitació massiva
+tramas.num_expedientes_tram_masiva=1
